-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Fix Version/s: None
-
Component/s: NTCore
-
Labels:
-
Environment:
Any vm, livecd
This issue is a regression from rev 58843 where ieframe was added to 2nd stage dll registration. Attempting to boot livecd after that change results in the mentioned assert and subsequent crash. Attached debug log with backtrace. From bug reporter:
[14:58:16] <[TheFlash]> Usurp: CM_KEY_NODE structure have Parent equal to HCELL_NIL, but a valid value for KeyCell in the parent's KCB