[MKHIVE] Set proper parent for registry keys. Patch by theflash < theflash at sdf dot lonestar dot org > CORE-7128 #resolve

svn path=/trunk/; revision=58875